--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
     <!-- font awesome link  -->
     <script src="https://kit.fontawesome.com/3b7a96cd6e.js" crossorigin="anonymous"></script>
 
-    <!-- external css file  -->
-    <link rel="stylesheet" href="./css/style.css">
+
 
     <!-- bootstrap css link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
+    <!-- owl carousel css links  -->
+    <link rel="stylesheet" href="./css/owl.carousel.css">
+    <link rel="stylesheet" href="./css/owl.theme.green.css">
+
+    <!-- external css file  -->
+    <link rel="stylesheet" href="./css/style.css">
     <!-- javascript file  -->
 
 
@@ -29,6 +34,8 @@
     <script src="./js/include-html-min.js"></script>
 
     <script defer src="./js/activePage.js"></script>
+
+
 </head>
 
 <body>
@@ -272,24 +279,24 @@
 
         <section class="sponsor-section container">
             <h3 class="text-center">Sponsors</h3>
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-6 align-items-center mt-3">
-                <div class="col my-4 my-lg-0 text-center">
-                    <img src="./images/sponsors/Top.png" width="82" class="img-fluid" alt="img">
+            <div class="owl-carousel owl-theme d-flex align-items-center">
+                <div class="sponsor sponsor1 my-4 my-lg-0 d-flex justify-content-center align-items-center">
+                    <img src="./images/sponsors/Top.png" class="img-fluid " alt="img">
                 </div>
-                <div class="col my-4 my-lg-0 text-center">
-                    <img src="./images/sponsors/square company.png" width="30" class="img-fluid" alt="img">
+                <div class="sponsor sponsor2 my-4 my-lg-0 d-flex justify-content-center align-items-center">
+                    <img src="./images/sponsors/square company.png" class="img-fluid " alt="img">
                 </div>
-                <div class="col my-4 my-lg-0 text-center">
-                    <img src="./images/sponsors/Hatil.png" width="100" class="img-fluid" alt="img">
+                <div class="sponsor sponsor3 my-4 my-lg-0 d-flex justify-content-center align-items-center">
+                    <img src="./images/sponsors/Hatil.png" class="img-fluid " alt="img">
                 </div>
-                <div class="col my-4 my-lg-0 text-center">
-                    <img src="./images/sponsors/Rangs.png" width="110" class="img-fluid" alt="img">
+                <div class="sponsor sponsor4 my-4 my-lg-0 d-flex justify-content-center align-items-center">
+                    <img src="./images/sponsors/Rangs.png" class="img-fluid " alt="img">
                 </div>
-                <div class="col my-4 my-lg-0 text-center">
-                    <img src="./images/sponsors/lotto.png" width="130" class="img-fluid" alt="img">
+                <div class="sponsor sponsor5 my-4 my-lg-0 d-flex justify-content-center align-items-center">
+                    <img src="./images/sponsors/lotto.png" class="img-fluid " alt="img">
                 </div>
-                <div class="col my-4 my-lg-0 text-center">
-                    <img src="./images/sponsors/OTOBI.png" width="60" class="img-fluid" alt="img">
+                <div class="sponsor sponsor6 my-4 my-lg-0 d-flex justify-content-center align-items-center">
+                    <img src="./images/sponsors/OTOBI.png" class="img-fluid " alt="img">
                 </div>
             </div>
         </section>
@@ -380,6 +387,39 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+
+    <!-- owl carousel js link  -->
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/owl.carousel.min.js"></script>
+
+
+    <script>
+        $(document).ready(function () {
+            $('.owl-carousel').owlCarousel({
+                loop: true,
+                margin: 10,
+                autoplay: true,
+                autoplayTimeout: 3000,
+                dots: false,
+                slideTransition: 'ease-out',
+                responsive: {
+                    0: {
+                        items: 1
+                    },
+                    768: {
+                        items: 3
+                    },
+                    992: {
+                        items: 6
+                    }
+                }
+            })
+
+
+
+        })
+
+    </script>
 </body>
 
 </html>
