--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 <body>
 
     <!-- header start  -->
-    <header class="sticky-top" id="header_file">
-        <nav class="navbar navbar-expand-lg">
+    <header class="sticky-top " id="header_file">
+        <nav class="navbar navbar-expand-lg w-100">
             <div class="container-lg p-0">
                 <a class="navbar-brand ms-3 ms-md-0" href="#">
                     <img class="img-fluid" src="./images/logo/logo.png" width="82" height="47" alt="logo">
@@ -80,7 +80,7 @@
 
 
     <!-- main part start  -->
-    <main>
+    <main class="w-100">
 
 
         <!-- slider start  -->
@@ -167,11 +167,11 @@
             </div>
         </section>
         <!-- calculate section  -->
-        <section class="calculate-section ">
+        <section class="calculate-section">
             <h3 class="text-center">Calculate Your Delivery Charge</h3>
 
-            <div class="row  row-cols-1 g-3  row-cols-lg-6 justify-content-center">
-                <div class="col">
+            <div class="row  row-cols-1 g-3  row-cols-lg-6 justify-content-center w-100">
+                <div class="col w-100">
                     <label for="from" class="form-label d-block">From</label>
                     <select id="from" name="from" class="p-1">
                         <option value="volvo">Dhaka City</option>
